Include end-pading, -border etc. when deciding if float can fit on a line

Bug: 754136
Change-Id: I52ad9adf3d8607bf22944c952137ec32c200e331